--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,4 +29,6 @@ jobs:
           pnpm test
           pnpm link -g
           chmod +x examples/echo.ts
-          ./examples/echo.ts hello
+          if [ $(./examples/echo.ts hello) != "hello1" ] ; then
+            exit 1
+          fi
