--- a/package.json
+++ b/package.json
@@ -49,11 +49,13 @@
   "dependencies": {
     "cac": "^6.7.12",
     "debug": "^4.3.4",
+    "fs-extra": "^10.1.0",
     "jiti": "^1.13.0",
     "kolorist": "^1.5.1"
   },
   "devDependencies": {
     "@types/debug": "^4.1.7",
+    "@types/fs-extra": "^9.0.13",
     "@types/node": "^17.0.22",
     "bumpp": "^7.1.1",
     "prettier": "^2.6.0",
