--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "cac": "^6.7.12",
     "debug": "^4.3.4",
     "fs-extra": "^10.1.0",
+    "globby": "^11.1.0",
     "jiti": "^1.13.0",
     "kolorist": "^1.5.1"
   },
