--- a/package.json
+++ b/package.json
@@ -66,5 +66,8 @@
     "vite": "^2.9.12",
     "vitest": "^0.14.2"
   },
-  "packageManager": "pnpm@7.2.1"
+  "packageManager": "pnpm@7.2.1",
+  "engines": {
+    "node": ">=16.0.0"
+  }
 }
