chore: more tests in CI

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,8 +33,13 @@ jobs:
         run: |
           pnpm test
           pnpm link -g
-          chmod +x examples/echo.ts
+          chmod +x examples/*.ts
+          ./examples/dir.ts
           ./examples/echo.ts hello
+          ./examples/http.ts http://numbersapi.com/42
+          ./examples/node.ts
+          ./examples/pkg.ts --root .
+          
           if [ $(./examples/echo.ts hello) != "hello" ] ; then
             exit 1
           fi
