--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "license": "MIT",
   "author": "XLor",
   "sideEffects": false,
+  "type": "module",
   "exports": {
     ".": {
       "require": "./dist/index.cjs",
@@ -53,7 +54,8 @@
     "fs-extra": "^10.1.0",
     "globby": "^13.1.2",
     "jiti": "^1.14.0",
-    "kolorist": "^1.5.1"
+    "kolorist": "^1.5.1",
+    "magic-regexp": "^0.2.1"
   },
   "devDependencies": {
     "@types/debug": "^4.1.7",
