--- a/package.json
+++ b/package.json
@@ -48,6 +48,8 @@
     "preversion": "pnpm build"
   },
   "dependencies": {
+    "@types/fs-extra": "^9.0.13",
+    "@types/node": "^18.6.1",
     "axios": "^0.27.2",
     "cac": "^6.7.14",
     "debug": "^4.3.4",
@@ -59,10 +61,8 @@
   },
   "devDependencies": {
     "@types/debug": "^4.1.7",
-    "@types/fs-extra": "^9.0.13",
-    "@types/node": "^18.6.1",
     "bumpp": "^8.2.1",
-    "prettier": "^2.7.1",
+    "prettier": "latest",
     "typescript": "^4.8.3",
     "unbuild": "^0.8.11",
     "vite": "^3.1.3",
