--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "postversion": "pnpm build"
   },
   "dependencies": {
+    "@babel/core": "^7.19.6",
     "@babel/plugin-transform-typescript": "^7.19.3",
     "@types/fs-extra": "^9.0.13",
     "@types/node": "^18.6.1",
@@ -61,11 +62,10 @@
     "magic-regexp": "^0.5.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.19.6",
     "@babel/types": "^7.19.4",
     "@types/babel__core": "^7.1.19",
     "@types/debug": "^4.1.7",
-    "bumpp": "^8.2.1",
+    "bumpp": "latest",
     "prettier": "latest",
     "typescript": "^4.8.4",
     "unbuild": "^0.9.4",
