--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "axios": "^1.1.3",
     "cac": "^6.7.14",
     "debug": "^4.3.4",
+    "find-up": "^6.3.0",
     "fs-extra": "^10.1.0",
     "globby": "^13.1.2",
     "jiti": "^1.16.0",
