--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
     "release": "bumpp --commit --push --tag && pnpm publish",
     "test": "OPTC_CACHE=false OPTC_ROOT=./test/space vitest",
     "typecheck": "tsc --noEmit",
-    "preversion": "pnpm build"
+    "postversion": "pnpm build"
   },
   "dependencies": {
     "@babel/core": "^7.20.12",
