--- a/package.json
+++ b/package.json
@@ -59,14 +59,14 @@
     "fs-extra": "^11.1.0",
     "globby": "^13.1.3",
     "jiti": "^1.18.2",
-    "kolorist": "^1.7.0",
-    "magic-regexp": "^0.6.3"
+    "kolorist": "^1.7.0"
   },
   "devDependencies": {
     "@babel/types": "^7.21.3",
     "@types/babel__core": "^7.20.0",
     "@types/debug": "^4.1.7",
     "bumpp": "latest",
+    "magic-regexp": "^0.6.3",
     "prettier": "latest",
     "typescript": "^4.9.5",
     "unbuild": "^1.1.2",
