--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "0.5.7",
   "description": "An easy way to write TypeScript cli script application.",
   "keywords": [
-    "cli"
+    "cli",
+    "script",
+    "TypeScript"
   ],
   "homepage": "https://github.com/yjl9903/optc#readme",
   "bugs": {
@@ -50,6 +52,7 @@
   "dependencies": {
     "@babel/core": "^7.21.3",
     "@babel/plugin-transform-typescript": "^7.21.3",
+    "@total-typescript/ts-reset": "^0.4.2",
     "@types/fs-extra": "^11.0.1",
     "@types/node": "^18.15.3",
     "axios": "^1.3.4",
