--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@ node_modules
 
 # Build output
 dist
+.turbo
 
 # Rest pulled from https://github.com/github/gitignore/blob/master/Node.gitignore
 # Logs
