--- a/package.json
+++ b/package.json
@@ -1,84 +1,26 @@
 {
-  "name": "optc",
+  "name": "@optc/monorepo",
   "version": "0.6.1",
-  "description": "An easy way to write TypeScript cli script application.",
-  "keywords": [
-    "cli",
-    "script",
-    "TypeScript"
-  ],
-  "homepage": "https://github.com/yjl9903/optc#readme",
-  "bugs": {
-    "url": "https://github.com/yjl9903/optc/issues"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/yjl9903/optc.git"
-  },
-  "license": "MIT",
-  "author": "XLor",
-  "sideEffects": false,
-  "type": "module",
-  "exports": {
-    ".": {
-      "require": "./dist/index.cjs",
-      "import": "./dist/index.mjs",
-      "types": "./dist/index.d.ts"
-    },
-    "./globals": {
-      "types": "./globals.d.ts"
-    }
-  },
-  "main": "./dist/index.cjs",
-  "module": "./dist/index.mjs",
-  "types": "./dist/index.d.ts",
-  "bin": {
-    "optc": "./cli.mjs"
-  },
-  "files": [
-    "dist",
-    "*.mjs",
-    "*.d.ts"
-  ],
+  "private": true,
   "scripts": {
-    "build": "unbuild",
-    "dev": "unbuild --stub",
-    "format": "prettier --write globals.d.ts src/**/*.ts test/**/*.ts examples/*.ts",
-    "release": "bumpp --commit --push --tag && pnpm publish",
-    "test": "OPTC_CACHE=false OPTC_ROOT=./test/space vitest",
-    "typecheck": "tsc --noEmit",
-    "preversion": "pnpm build && pnpm test --run",
+    "build": "turbo run build",
+    "format": "turbo run format",
+    "release": "bumpp package.json packages/*/package.json --commit --push --tag && pnpm -r publish --access public",
+    "test": "pnpm -C packages/optc test",
+    "test:ci": "turbo run test:ci",
+    "typecheck": "turbo run typecheck",
+    "preversion": "pnpm test:ci",
     "postversion": "pnpm build"
   },
-  "dependencies": {
-    "@babel/core": "^7.21.3",
-    "@babel/plugin-transform-typescript": "^7.21.3",
-    "@total-typescript/ts-reset": "^0.4.2",
-    "@types/fs-extra": "^11.0.1",
-    "@types/node": "^18.15.5",
-    "axios": "^1.3.4",
-    "cac": "^6.7.14",
-    "debug": "^4.3.4",
-    "find-up": "^6.3.0",
-    "fs-extra": "^11.1.1",
-    "globby": "^13.1.3",
-    "jiti": "^1.18.2",
-    "kolorist": "^1.7.0"
-  },
   "devDependencies": {
-    "@babel/types": "^7.21.3",
-    "@types/babel__core": "^7.20.0",
-    "@types/debug": "^4.1.7",
     "bumpp": "latest",
     "magic-regexp": "^0.6.3",
     "prettier": "latest",
+    "turbo": "^1.8.5",
     "typescript": "^5.0.2",
     "unbuild": "^1.1.2",
     "vite": "^4.2.1",
     "vitest": "^0.29.7"
   },
-  "packageManager": "pnpm@7.30.0",
-  "engines": {
-    "node": ">=v16.0.0"
-  }
+  "packageManager": "pnpm@7.30.0"
 }
