--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "test:ci": "turbo run test:ci",
     "typecheck": "turbo run typecheck",
     "preversion": "pnpm test:ci",
-    "postversion": "pnpm build"
+    "postversion": "pnpm build",
+    "optc": "tsx packages/optc/src/cli.ts"
   },
   "devDependencies": {
     "bumpp": "latest",
