--- a/packages/optc/package.json
+++ b/packages/optc/package.json
@@ -56,7 +56,7 @@
     "@types/fs-extra": "^11.0.1",
     "@types/node": "^18.15.5",
     "axios": "^1.3.4",
-    "cac": "^6.7.14",
+    "breadc": "^0.8.9",
     "debug": "^4.3.4",
     "find-up": "^6.3.0",
     "fs-extra": "^11.1.1",
@@ -67,14 +67,7 @@
   "devDependencies": {
     "@babel/types": "^7.21.3",
     "@types/babel__core": "^7.20.0",
-    "@types/debug": "^4.1.7",
-    "bumpp": "latest",
-    "magic-regexp": "^0.6.3",
-    "prettier": "latest",
-    "typescript": "^5.0.2",
-    "unbuild": "^1.1.2",
-    "vite": "^4.2.1",
-    "vitest": "^0.29.7"
+    "@types/debug": "^4.1.7"
   },
   "packageManager": "pnpm@7.30.0",
   "engines": {
