--- a/packages/loader/package.json
+++ b/packages/loader/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "optc",
+  "name": "@optc/loader",
   "version": "0.6.1",
-  "description": "An easy way to write TypeScript cli script application.",
+  "description": "Optc loader",
   "keywords": [
     "optc",
     "breadc",
@@ -34,40 +34,24 @@
   "main": "./dist/index.cjs",
   "module": "./dist/index.mjs",
   "types": "./dist/index.d.ts",
-  "bin": {
-    "optc": "./cli.mjs"
-  },
   "files": [
     "dist",
-    "*.mjs",
-    "*.d.ts"
+    "*.mjs"
   ],
   "scripts": {
     "build": "unbuild",
     "dev": "unbuild --stub",
-    "format": "prettier --write globals.d.ts src/**/*.ts test/**/*.ts",
-    "test": "OPTC_CACHE=false OPTC_ROOT=./test/space vitest",
-    "test:ci": "OPTC_CACHE=false OPTC_ROOT=./test/space vitest --run",
+    "format": "prettier --write src/**/*.ts test/**/*.ts",
+    "test": "vitest",
+    "test:ci": "vitest --run",
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
-    "@babel/core": "^7.21.3",
-    "@babel/plugin-transform-typescript": "^7.21.3",
-    "@total-typescript/ts-reset": "^0.4.2",
-    "@types/fs-extra": "^11.0.1",
-    "@types/node": "^18.15.5",
-    "axios": "^1.3.4",
+    "@swc/core": "^1.3.42",
     "breadc": "^0.8.9",
-    "debug": "^4.3.4",
-    "find-up": "^6.3.0",
-    "fs-extra": "^11.1.1",
-    "globby": "^13.1.3",
-    "jiti": "^1.18.2",
-    "kolorist": "^1.7.0"
+    "debug": "^4.3.4"
   },
   "devDependencies": {
-    "@babel/types": "^7.21.3",
-    "@types/babel__core": "^7.20.0",
     "@types/debug": "^4.1.7"
   },
   "packageManager": "pnpm@7.30.0",
