--- a/packages/loader/package.json
+++ b/packages/loader/package.json
@@ -46,7 +46,8 @@
   "dependencies": {
     "@swc/core": "^1.3.42",
     "breadc": "^0.8.9",
-    "debug": "^4.3.4"
+    "debug": "^4.3.4",
+    "pirates": "^4.0.1"
   },
   "devDependencies": {
     "@types/debug": "^4.1.7"
