chore: update renovate.json

--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -1,20 +1,5 @@
 {
   "extends": [
-    "config:base"
-  ],
-  "packageRules": [
-    {
-      "matchDepTypes": ["devDependencies", "packageManager"],
-      "automerge": true
-    },
-    {
-      "matchManagers": ["github-actions"],
-      "automerge": true
-    },
-    {
-      "packageNames": ["node"],
-      "enabled": false
-    }
-  ],
-  "rangeStrategy": "bump"
+    "github>yjl9903/renovate-config",
+  ]
 }
